--- a/terms.html
+++ b/terms.html
@@ -1,92 +1,59 @@
-<!DOCTYPE html>
-<html lang="ko">
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="google-adsense-account" content="ca-pub-7713287823701747">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AI 가위바위보 서비스 이용약관.">
-    <title>이용약관 | 가위 바위 보 AI 대결</title>
-    <link rel="stylesheet" href="style.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747"
-        crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <meta name="google-adsense-account" content="ca-pub-7713287823701747">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Terms of use for Name → Hangul." />
+  <title>Terms | Name → Hangul</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747" crossorigin="anonymous"></script>
+  <style>
+    :root{--bg:#0b1020;--card:#11192e;--text:#eef2ff;--muted:#a7b0c5;--border:#1f2b46;}
+    *{box-sizing:border-box} body{margin:0;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial; background:var(--bg); color:var(--text);} 
+    .wrap{max-width:900px;margin:0 auto;padding:28px 18px 60px;}
+    .nav{display:flex;flex-wrap:wrap;gap:10px;margin:12px 0 20px;}
+    .nav a{color:var(--muted);text-decoration:none;border:1px solid var(--border);padding:8px 12px;border-radius:999px;font-size:12px;}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:18px;padding:18px;}
+    h1{margin:0 0 8px;font-size:26px;} h2{margin:14px 0 6px;font-size:16px;} p{color:var(--muted);line-height:1.6;}
+    ul{margin:6px 0 0 18px;color:var(--muted);} li{margin:4px 0;}
+    footer{margin-top:18px;color:var(--muted);font-size:12px;}
+  </style>
 </head>
 <body>
-    <main class="container page">
-        <header class="topbar">
-            <div class="brand">
-                <p class="eyebrow">TERMS</p>
-                <h1>이용약관</h1>
-                <p class="subtitle">서비스 이용 시 지켜야 할 기본 규칙을 안내합니다.</p>
-            </div>
-            <a class="ghost" href="index.html">홈으로</a>
-        </header>
+  <main class="wrap">
+    <h1>Terms of Use</h1>
+    <p>Last updated: 2026-02-22</p>
 
-        <nav class="nav">
-            <a href="index.html">홈</a>
-            <a href="about.html">소개</a>
-            <a href="resources.html">리소스</a>
-            <a href="privacy.html">개인정보</a>
-            <a href="terms.html" aria-current="page">이용약관</a>
-            <a href="contact.html">문의</a>
-        </nav>
+    <nav class="nav" aria-label="Site">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="resources.html">Resources</a>
+      <a href="contact.html">Contact</a>
+    </nav>
 
-        <section class="section">
-            <div class="section-head">
-                <h2>1. 서비스 개요</h2>
-                <p class="section-subtitle">AI 가위바위보는 브라우저에서 동작하는 체험형 서비스입니다.</p>
-            </div>
-            <p>본 서비스는 교육 및 체험 목적을 위해 제공됩니다. 사용자는 무료로 서비스를 이용할 수 있습니다.</p>
-        </section>
+    <section class="card">
+      <h2>Purpose</h2>
+      <p>This site provides a name-to-Hangul conversion tool for personal and informational use.</p>
 
-        <section class="section">
-            <div class="section-head">
-                <h2>2. 이용자의 의무</h2>
-                <p class="section-subtitle">서비스의 정상적인 운영을 방해하지 않아야 합니다.</p>
-            </div>
-            <ul class="bullet">
-                <li>비정상적인 트래픽 유발, 자동화된 접근, 서비스 공격 행위를 금지합니다.</li>
-                <li>광고가 제공되는 경우, 인위적인 클릭 유도 또는 부정 클릭을 금지합니다.</li>
-                <li>타인의 권리를 침해하거나 불법 행위를 목적으로 사용해서는 안 됩니다.</li>
-            </ul>
-        </section>
+      <h2>Accuracy</h2>
+      <p>Spellings are not guaranteed to be official or universally accepted. Users are responsible for choosing the spelling they prefer.</p>
 
-        <section class="section">
-            <div class="section-head">
-                <h2>3. 서비스 변경 및 중단</h2>
-                <p class="section-subtitle">서비스는 개선을 위해 변경될 수 있습니다.</p>
-            </div>
-            <p>운영자는 서비스의 일부 또는 전부를 변경하거나 중단할 수 있으며, 중요한 변경 사항은 사이트 내 공지로 안내합니다.</p>
-        </section>
+      <h2>Acceptable use</h2>
+      <ul>
+        <li>Do not use the site for unlawful or harmful activities.</li>
+        <li>Do not attempt to disrupt or abuse the service.</li>
+      </ul>
 
-        <section class="section">
-            <div class="section-head">
-                <h2>4. 책임의 제한</h2>
-                <p class="section-subtitle">서비스는 있는 그대로 제공됩니다.</p>
-            </div>
-            <p>운영자는 서비스 이용과 관련하여 발생하는 손해에 대해 책임을 지지 않습니다. 다만 관련 법령이 허용하는 범위 내에서 최선을 다해 서비스를 제공합니다.</p>
-        </section>
+      <h2>Changes</h2>
+      <p>We may update these terms over time. Continued use means you accept the latest version.</p>
 
-        <section class="section">
-            <div class="section-head">
-                <h2>5. 문의</h2>
-                <p class="section-subtitle">이용약관 관련 문의는 아래 연락처로 부탁드립니다.</p>
-            </div>
-            <p>goodhywon@gmail.com</p>
-        </section>
+      <h2>Contact</h2>
+      <p>Questions: goodhywon@gamil.com</p>
+    </section>
 
-        <footer class="footer">
-            <div>
-                <p class="footer-title">AI RPS CHALLENGE</p>
-                <p class="footer-text">최종 업데이트: 2026-02-22</p>
-            </div>
-            <div class="footer-links">
-                <a href="index.html">홈</a>
-                <a href="about.html">소개</a>
-                <a href="resources.html">리소스</a>
-                <a href="privacy.html">개인정보처리방침</a>
-                <a href="contact.html">문의</a>
-            </div>
-        </footer>
-    </main>
+    <footer>© <span id="year"></span> Name → Hangul</footer>
+  </main>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
