--- a/privacy.html
+++ b/privacy.html
@@ -1,90 +1,60 @@
-<!DOCTYPE html>
-<html lang="ko">
+<!doctype html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="google-adsense-account" content="ca-pub-7713287823701747">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AI 가위바위보 서비스 개인정보처리방침 안내.">
-    <title>개인정보처리방침 | 가위 바위 보 AI 대결</title>
-    <link rel="stylesheet" href="style.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747"
-        crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <meta name="google-adsense-account" content="ca-pub-7713287823701747">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Privacy policy for Name → Hangul." />
+  <title>Privacy Policy | Name → Hangul</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747" crossorigin="anonymous"></script>
+  <style>
+    :root{--bg:#0b1020;--card:#11192e;--text:#eef2ff;--muted:#a7b0c5;--border:#1f2b46;}
+    *{box-sizing:border-box} body{margin:0;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial; background:var(--bg); color:var(--text);} 
+    .wrap{max-width:900px;margin:0 auto;padding:28px 18px 60px;}
+    .nav{display:flex;flex-wrap:wrap;gap:10px;margin:12px 0 20px;}
+    .nav a{color:var(--muted);text-decoration:none;border:1px solid var(--border);padding:8px 12px;border-radius:999px;font-size:12px;}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:18px;padding:18px;}
+    h1{margin:0 0 8px;font-size:26px;} h2{margin:14px 0 6px;font-size:16px;} p{color:var(--muted);line-height:1.6;}
+    ul{margin:6px 0 0 18px;color:var(--muted);} li{margin:4px 0;}
+    footer{margin-top:18px;color:var(--muted);font-size:12px;}
+  </style>
 </head>
 <body>
-    <main class="container page">
-        <header class="topbar">
-            <div class="brand">
-                <p class="eyebrow">PRIVACY</p>
-                <h1>개인정보처리방침</h1>
-                <p class="subtitle">서비스 이용 중 어떤 정보가 처리되는지 투명하게 안내합니다.</p>
-            </div>
-            <a class="ghost" href="index.html">홈으로</a>
-        </header>
+  <main class="wrap">
+    <h1>Privacy Policy</h1>
+    <p>Last updated: 2026-02-22</p>
 
-        <nav class="nav">
-            <a href="index.html">홈</a>
-            <a href="about.html">소개</a>
-            <a href="resources.html">리소스</a>
-            <a href="privacy.html" aria-current="page">개인정보</a>
-            <a href="terms.html">이용약관</a>
-            <a href="contact.html">문의</a>
-        </nav>
+    <nav class="nav" aria-label="Site">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="terms.html">Terms</a>
+      <a href="resources.html">Resources</a>
+      <a href="contact.html">Contact</a>
+    </nav>
 
-        <section class="section">
-            <div class="section-head">
-                <h2>1. 수집하는 정보</h2>
-                <p class="section-subtitle">이 서비스는 별도의 회원가입 없이 이용할 수 있습니다.</p>
-            </div>
-            <p>본 사이트는 사용자를 식별할 수 있는 개인정보를 직접 수집하지 않습니다.</p>
-        </section>
+    <section class="card">
+      <h2>Summary</h2>
+      <p>Name → Hangul runs entirely in your browser. We do not collect or store the names you enter. Custom spellings are stored only in your browser using localStorage.</p>
 
-        <section class="section">
-            <div class="section-head">
-                <h2>2. 카메라 처리</h2>
-                <p class="section-subtitle">카메라 영상은 브라우저 안에서만 처리됩니다.</p>
-            </div>
-            <p>손 모양 인식을 위한 카메라 영상은 사용자의 브라우저에서만 처리되며, 별도의 서버로 전송하거나 저장하지 않습니다.</p>
-        </section>
+      <h2>Information we do not collect</h2>
+      <ul>
+        <li>Your input names</li>
+        <li>Personal identifiers</li>
+        <li>Account data (no accounts are required)</li>
+      </ul>
 
-        <section class="section">
-            <div class="section-head">
-                <h2>3. 외부 서비스</h2>
-                <p class="section-subtitle">기능 제공을 위해 외부 리소스를 불러올 수 있습니다.</p>
-            </div>
-            <p>본 사이트는 모델 및 라이브러리 로딩을 위해 외부 서비스(예: Teachable Machine, CDN)를 사용할 수 있습니다. 해당 서비스 이용 시 각 서비스의 개인정보처리방침이 적용될 수 있습니다.</p>
-        </section>
+      <h2>Local storage</h2>
+      <p>If you save a custom spelling, it is stored in your browser so the site can remember your preference. You can delete this anytime using the “Reset custom” button on the homepage.</p>
 
-        <section class="section">
-            <div class="section-head">
-                <h2>4. 광고 및 쿠키</h2>
-                <p class="section-subtitle">광고가 표시되는 경우에만 적용됩니다.</p>
-            </div>
-            <p>본 사이트는 향후 Google AdSense 광고를 게재할 수 있습니다. 광고가 표시되는 경우 Google 및 제3자 광고 파트너는 쿠키 또는 유사한 기술을 사용하여 맞춤형 광고를 제공할 수 있습니다.</p>
-            <p>Google이 파트너 사이트에서 데이터를 사용하는 방식은 아래 문서를 참고하세요.</p>
-            <p><a href="https://policies.google.com/technologies/partner-sites" target="_blank" rel="noreferrer">Google의 파트너 사이트에서 데이터 사용</a></p>
-        </section>
+      <h2>Advertising</h2>
+      <p>This site may display ads provided by Google. Google may use cookies or similar technologies to serve and measure ads. For more details, review Google’s advertising policies.</p>
 
-        <section class="section">
-            <div class="section-head">
-                <h2>5. 문의</h2>
-                <p class="section-subtitle">개인정보 관련 문의는 아래 연락처로 부탁드립니다.</p>
-            </div>
-            <p>goodhywon@gmail.com</p>
-        </section>
+      <h2>Contact</h2>
+      <p>Questions about this policy: goodhywon@gamil.com</p>
+    </section>
 
-        <footer class="footer">
-            <div>
-                <p class="footer-title">AI RPS CHALLENGE</p>
-                <p class="footer-text">최종 업데이트: 2026-02-22</p>
-            </div>
-            <div class="footer-links">
-                <a href="index.html">홈</a>
-                <a href="about.html">소개</a>
-                <a href="resources.html">리소스</a>
-                <a href="terms.html">이용약관</a>
-                <a href="contact.html">문의</a>
-            </div>
-        </footer>
-    </main>
+    <footer>© <span id="year"></span> Name → Hangul</footer>
+  </main>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
