Fix contact email to gmail.com

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
     <section class="card">
       <h2>Email</h2>
-      <p>goodhywon@gamil.com</p>
+      <p>goodhywon@gmail.com</p>
     </section>
 
     <section class="card" style="margin-top:12px;">
