--- a/privacy.html
+++ b/privacy.html
@@ -50,7 +50,7 @@
       <p>This site may display ads provided by Google. Google may use cookies or similar technologies to serve and measure ads. For more details, review Google’s advertising policies.</p>
 
       <h2>Contact</h2>
-      <p>Questions about this policy: goodhywon@gamil.com</p>
+      <p>Questions about this policy: goodhywon@gmail.com</p>
     </section>
 
     <footer>© <span id="year"></span> Name → Hangul</footer>
