--- a/terms.html
+++ b/terms.html
@@ -49,7 +49,7 @@
       <p>We may update these terms over time. Continued use means you accept the latest version.</p>
 
       <h2>Contact</h2>
-      <p>Questions: goodhywon@gamil.com</p>
+      <p>Questions: goodhywon@gmail.com</p>
     </section>
 
     <footer>© <span id="year"></span> Name → Hangul</footer>
