--- a/index.html
+++ b/index.html
@@ -6,211 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Name → Hangul</title>
   <meta name="description" content="Write your English name in Hangul. Dictionary-first accuracy + smart fallback. Browser-only."/>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747"
-      crossorigin="anonymous"></script>
-  <style>
-    :root{
-      --bg: #f5f6f8;
-      --bg2:#ffffff;
-      --ink:#0b0d12;
-      --muted:#5a6472;
-      --border:#e7e9ee;
-      --glass: rgba(255,255,255,.72);
-      --shadow: 0 18px 50px rgba(11,13,18,.08);
-      --radius: 20px;
-      --accent:#0071e3;
-      --accent2:#34c759;
-      --danger:#ff3b30;
-      --line:#e1e4ea;
-    }
-
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      font-family: "SF Pro Text", "SF Pro Display", -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-      color:var(--ink);
-      background:
-        radial-gradient(1200px 600px at 50% -10%, rgba(0,113,227,.12), transparent 60%),
-        radial-gradient(900px 400px at 90% 10%, rgba(52,199,89,.10), transparent 60%),
-        linear-gradient(180deg, #f7f8fb, #eef1f6);
-      overflow-x:hidden;
-    }
-
-    .wrap{
-      max-width: 1040px;
-      margin: 0 auto;
-      padding: 28px 18px 80px;
-    }
-
-    header{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:16px;
-      margin-bottom: 14px;
-    }
-
-    .brand{
-      display:flex; align-items:center; gap:12px;
-      min-width: 240px;
-    }
-
-    .mark{
-      width:40px;height:40px;border-radius:12px;
-      background: linear-gradient(135deg, #0a84ff, #34c759);
-      box-shadow: 0 10px 22px rgba(0,0,0,.12);
-      position:relative;
-      overflow:hidden;
-    }
-    .mark:after{
-      content:"";
-      position:absolute; inset:-40%;
-      background: linear-gradient(120deg, rgba(255,255,255,.75), transparent 55%);
-      transform: rotate(18deg);
-    }
-
-    .brand h1{ margin:0; font-size:16px; letter-spacing:-.02em; }
-    .brand p{ margin:3px 0 0; font-size:12px; color:var(--muted); }
-
-    .top-actions{ display:flex; gap:10px; align-items:center; flex-wrap:wrap; justify-content:flex-end; }
-    .pill{
-      display:inline-flex; align-items:center; gap:8px;
-      padding:10px 12px; border:1px solid var(--border);
-      border-radius:999px; background:var(--glass);
-      cursor:pointer; user-select:none; font-size:13px; color:var(--muted);
-      transition: transform .12s ease, border-color .12s ease, background .12s ease;
-      backdrop-filter: blur(14px);
-    }
-    .pill:hover{ border-color:#cdd3dc; transform: translateY(-1px); background:#fff; }
-
-    .nav{
-      display:flex; flex-wrap:wrap; gap:10px; margin-bottom: 18px;
-    }
-    .nav a{
-      text-decoration:none; color:var(--muted); border:1px solid var(--border);
-      border-radius:999px; padding:8px 12px; font-size:12px; background:var(--glass);
-      transition: border-color .12s ease, transform .12s ease, color .12s ease;
-    }
-    .nav a:hover{ border-color:#cdd3dc; color:var(--ink); transform: translateY(-1px); background:#fff; }
-
-    .hero{
-      display:flex; flex-direction: column; gap: 10px; margin: 8px 0 18px;
-    }
-    .hero .headline{ font-size: 34px; letter-spacing:-.03em; margin:0; }
-    .hero .subhead{ margin:0; color:var(--muted); font-size: 15px; line-height: 1.6; max-width: 85ch; }
-
-    .grid{
-      display:grid; grid-template-columns: 1.15fr .85fr; gap: 16px; align-items:start;
-    }
-    @media (max-width: 940px){
-      .grid{ grid-template-columns: 1fr; }
-    }
-
-    .card{
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      background: var(--glass);
-      box-shadow: var(--shadow);
-      overflow:hidden;
-      position: relative;
-      backdrop-filter: blur(18px);
-    }
-    .card .inner{ padding: 18px; }
-
-    .badge{
-      display:inline-flex; align-items:center; gap:8px; padding:8px 10px;
-      border-radius:999px; border:1px solid var(--border);
-      background:#fff; color:var(--muted); font-size: 12px;
-    }
-
-    .row{ display:flex; gap:10px; flex-wrap:wrap; align-items: stretch; margin-top: 14px; }
-
-    .field{
-      flex: 1 1 320px; border: 1px solid var(--border); border-radius: 14px;
-      background: #fff; display:flex; align-items:center; gap:10px; padding: 12px 12px;
-    }
-
-    .field .icon{
-      width:30px;height:30px;border-radius: 10px;
-      display:flex;align-items:center;justify-content:center;
-      border:1px solid var(--border);
-      background: #f6f7fb; color: #475366; font-size: 14px; flex: 0 0 auto;
-    }
-
-    .field input{
-      flex:1; border:0; outline:none; background: transparent; color: var(--ink);
-      font-size: 16px; padding: 2px 2px; min-width: 180px;
-    }
-    .field input::placeholder{ color: #9aa3af; }
-
-    .btn{
-      border:1px solid var(--border); border-radius: 14px; padding: 12px 14px;
-      background: #fff; color: var(--ink); font-weight: 700; letter-spacing: -.01em;
-      cursor:pointer; transition: transform .12s ease, box-shadow .12s ease, border-color .12s ease;
-      display:inline-flex; align-items:center; gap:8px; user-select:none;
-    }
-    .btn:hover{ transform: translateY(-1px); border-color:#cdd3dc; box-shadow: 0 8px 20px rgba(11,13,18,.08); }
-    .btn:active{ transform: translateY(0px); }
-    .btn.primary{ border-color:#cfe3fb; background: linear-gradient(180deg, #0a84ff, #0071e3); color:#fff; }
-    .btn.green{ border-color:#c7efd5; background: linear-gradient(180deg, #34c759, #23b24a); color:#fff; }
-    .btn.danger{ border-color:#ffd1cc; background: linear-gradient(180deg, #ff453a, #ff3b30); color:#fff; }
-
-    .results{ display:grid; gap:10px; margin-top: 14px; }
-    .result{
-      border: 1px solid var(--border); background: #fff; border-radius: 16px;
-      padding: 12px 12px; display:flex; align-items:center; justify-content:space-between; gap: 12px;
-    }
-    .hangul{ font-size: 28px; font-weight: 900; letter-spacing: .02em; line-height: 1.1; }
-    .meta{ display:flex; align-items:center; gap:10px; flex-wrap:wrap; margin-top: 6px; color: var(--muted); font-size: 12px; }
-    .mini-badge{
-      display:inline-flex; align-items:center; gap:6px; padding:6px 10px;
-      border-radius:999px; border:1px solid var(--border); background:#f8f9fb; color: var(--muted); font-size: 12px;
-    }
-
-    .hint{ margin-top: 12px; color: var(--muted); font-size: 13px; line-height: 1.55; }
-
-    .section{
-      margin-top: 22px; border: 1px solid var(--border); border-radius: var(--radius);
-      background: #fff; padding: 18px; box-shadow: var(--shadow);
-    }
-
-    .section-head{ display:flex; align-items:center; justify-content:space-between; gap:10px; margin-bottom: 8px; }
-    .section-head h3{ margin:0; font-size: 16px; letter-spacing:-.01em; }
-    .section-head span{ color: var(--muted); font-size: 12px; }
-
-    .text{ color: var(--muted); font-size: 13px; line-height: 1.65; margin: 6px 0 0; }
-
-    .card-grid{ display:grid; grid-template-columns: repeat(3, minmax(0, 1fr)); gap: 12px; margin-top: 10px; }
-    @media (max-width: 900px){ .card-grid{ grid-template-columns: 1fr; } }
-    .mini-card{ border: 1px solid var(--border); border-radius: 16px; padding: 12px; background: #f9fafc; }
-
-    .table{ width:100%; border-collapse: collapse; margin-top: 10px; font-size: 13px; }
-    .table th, .table td{ padding: 10px 8px; border-bottom: 1px solid var(--line); text-align: left; }
-    .table th{ color: var(--muted); font-weight: 600; }
-
-    .faq{ display:grid; gap:10px; margin-top: 10px; }
-    .faq-item{ border:1px solid var(--border); border-radius: 14px; padding: 12px; background: #fff; }
-    .faq-item h4{ margin:0 0 6px 0; font-size: 14px; }
-    .faq-item p{ margin:0; color: var(--muted); font-size: 13px; line-height: 1.55; }
-
-    footer{ margin-top: 18px; text-align:center; color: var(--muted); font-size: 12px; }
-    footer a{ color: var(--muted); text-decoration:none; }
-    footer a:hover{ color: var(--ink); }
-
-    .toast{
-      position: fixed; left: 50%; transform: translateX(-50%); bottom: 18px;
-      padding: 10px 12px; border-radius: 999px; background: rgba(11,13,18,.9); color: white;
-      border: 1px solid rgba(255,255,255,.15); opacity:0; pointer-events:none;
-      transition: opacity .18s ease; font-size: 13px; z-index: 9999;
-    }
-    .toast.show{ opacity: 1; }
-  </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7713287823701747" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <div class="wrap">
-    <header>
+    <header class="reveal">
       <div class="brand">
         <div class="mark" aria-hidden="true"></div>
         <div>
@@ -225,7 +27,7 @@
       </div>
     </header>
 
-    <nav class="nav" aria-label="Page">
+    <nav class="nav reveal delay-1" aria-label="Page">
       <a href="#tool">Tool</a>
       <a href="#how">How it works</a>
       <a href="#examples">Examples</a>
@@ -238,7 +40,7 @@
       <a href="about.html">About</a>
     </nav>
 
-    <section class="hero">
+    <section class="hero reveal delay-2">
       <h2 class="headline">Write your name in Hangul</h2>
       <p class="subhead">
         Dictionary-first for accuracy. If something looks wrong, save a correction once —
@@ -248,7 +50,7 @@
     </section>
 
     <section id="tool" class="grid">
-      <section class="card">
+      <section class="card reveal delay-3">
         <div class="inner">
           <div class="badge">English-only · No server · No AI tokens</div>
 
@@ -268,7 +70,7 @@
         </div>
       </section>
 
-      <aside class="card" id="dictionary">
+      <aside class="card reveal delay-4" id="dictionary">
         <div class="inner">
           <div class="panel-title">
             <b>Fix a name (dictionary)</b>
@@ -301,7 +103,7 @@
       </aside>
     </section>
 
-    <section id="how" class="section">
+    <section id="how" class="section reveal delay-2">
       <div class="section-head">
         <h3>How it works</h3>
         <span>Accuracy first</span>
@@ -328,7 +130,7 @@
       </div>
     </section>
 
-    <section id="examples" class="section">
+    <section id="examples" class="section reveal delay-3">
       <div class="section-head">
         <h3>Example conversions</h3>
         <span>Realistic output</span>
@@ -372,7 +174,7 @@
       <p class="text">Names vary by preference. If you want a different spelling, save it in the custom dictionary.</p>
     </section>
 
-    <section id="quality" class="section">
+    <section id="quality" class="section reveal delay-4">
       <div class="section-head">
         <h3>Quality & intent</h3>
         <span>User-first content</span>
@@ -398,7 +200,7 @@
       </div>
     </section>
 
-    <section id="faq" class="section">
+    <section id="faq" class="section reveal delay-5">
       <div class="section-head">
         <h3>FAQ</h3>
         <span>Quick answers</span>
@@ -423,7 +225,7 @@
       </div>
     </section>
 
-    <section id="privacy" class="section">
+    <section id="privacy" class="section reveal delay-3">
       <div class="section-head">
         <h3>Privacy</h3>
         <span>No server</span>
@@ -435,7 +237,7 @@
       </p>
     </section>
 
-    <section id="contact" class="section">
+    <section id="contact" class="section reveal delay-4">
       <div class="section-head">
         <h3>Contact</h3>
         <span>Feedback welcome</span>
@@ -447,7 +249,7 @@
       </p>
     </section>
 
-    <footer>
+    <footer class="reveal delay-5">
       © <span id="year"></span> Name → Hangul · Privacy-friendly (localStorage only) ·
       Contact: <b>goodhywon@gmail.com</b> ·
       <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a> · <a href="contact.html">Contact</a>
@@ -689,9 +491,6 @@
       return res;
     }
 
-    // ------------------------------
-    // Lookup: Custom > Built-in > Rule
-    // ------------------------------
     function lookupOneWord(wordLower) {
       const custom = loadCustomDict();
       if (custom[wordLower]) return { options: [custom[wordLower]], source: "custom" };
@@ -704,9 +503,6 @@
       return { options: [...new Set(opts)].slice(0, 3), source: "rule" };
     }
 
-    // ------------------------------
-    // Results
-    // ------------------------------
     function sourceLabel(src){
       if (src === "custom") return "Custom dictionary";
       if (src === "builtin") return "Built-in dictionary";
@@ -753,9 +549,6 @@
       resultsEl.appendChild(debug);
     }
 
-    // ------------------------------
-    // Convert
-    // ------------------------------
     function convert() {
       const raw = nameInput.value.trim();
       if (!raw) { resultsEl.innerHTML = ""; return; }
@@ -795,9 +588,6 @@
     $("#convertBtn").addEventListener("click", convert);
     nameInput.addEventListener("keydown", (e) => { if (e.key === "Enter") convert(); });
 
-    // ------------------------------
-    // Fix actions
-    // ------------------------------
     $("#saveFixBtn").addEventListener("click", () => {
       const en = normalizeEnglishKey(fixEn.value);
       const ko = normalizeHangulValue(fixKo.value);
@@ -853,6 +643,7 @@
 
     updateDictStatus();
     nameInput.focus();
+    $("#year").textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
